option java_outer_classname = "LCDeleteCircleAreaAlarm";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting";

message DeleteCircleAreaAlarm{
	repeated int64 areaIdentify = 1;
}